# devhand

./: DEPLOYMENT_GUIDE.md  README.md  pyproject.toml
dh/: cli.py
dh/commands/: db.py  make.py  setup.py  validate.py
dh/utils/: config.py  db.py
tests/: test_context.py
tests/commands/: test_db.py  test_make.py  test_setup.py  test_validate.py
tests/utils/: test_commands.py  test_config.py
