[project]
name = "devhand"
version = "0.1.0"
description = "CLI tool to improve devX for webapps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/dskarbrevik/devhand"
Issues = "https://github.com/dskarbrevik/devhand/issues"


[project.scripts]
dh = "dh.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dh"]